Fix issue where mat-card on mobile devices did not expand to fit content

--- a/src/app/contact-us/contact-us.component.scss
+++ b/src/app/contact-us/contact-us.component.scss
@@ -39,7 +39,7 @@ textarea {
 @media only screen and (max-width: 600px) {
   mat-card {
     margin: 0;
-    height: 100%;
+    min-height: 100%;
   }
 
   .flex-row {
