--- a/src/app/our-mission/our-mission.component.scss
+++ b/src/app/our-mission/our-mission.component.scss
@@ -19,7 +19,7 @@ p {
 @media only screen and (max-width: 600px) {
   mat-card {
     margin: 0;
-    height: 100%;
+    min-height: 100%;
   }
 
 }
